deployment/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project
  namespace: mgr
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: devops-project
  template:
    metadata:
      labels:
        app: devops-project
    spec:
      containers:
      - name: devops-project
        #image: ${OCIR_HOST}/${OCIR_STORAGE_NAMESPACE}/devops-project/oci-devops-project:${APPLICATION_VERSION}
        image: iad.ocir.io/id6dibaakt36/devops-project/oci-devops-project:8350
        imagePullPolicy: Always
        ports:
        - name: service-port
          containerPort: 8090
          #resources:
          #limits:
          #cpu: "250m"
      #volumes:
      #- name: sf-conf-secure-vol
        #secret:
          #secretName: sf-conf-secure
      imagePullSecrets:
      - name: my-docker-reg
