deployment/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-devops
  namespace: mgr
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /greetings/actions/hello/
        pathType: Prefix
        backend:
          service:
            name: svc-devops-project
            port:
              number: 8090
