deployment/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-devops-project
  namespace: mgr
spec:
  type: ClusterIP
  selector:
    app: devops-project
  ports:
    - name: service-ports
      protocol: TCP
      port: 8090
